[metadata]
name = gamma-tools
version = attr: gamma_tools.__version__
description = Extensions for scikit-learn regarding gamma divergence
long_description = file: README.md
url = https://github.com/kshkss/gamma-tools
author = Akishika Issui
license = GNU GENERAL PUBLIC LICENSE Version 3 (GPLv3)

[options]
packages = gamma_tools
install_requires =
  scikit-learn >= 0.23.2
  torch >= 1.7.0

